<resources>
    <string name="app_name">Depression_Detection</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_depressionTest">Depression Test</string>
    <string name="menu_ProgressTest">Progress Test</string>
    <string name="menu_suggestion">Suggestion</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_logout">Logout</string>
    <string name="homeString">Your target for today is keep positive mindset\nand notice to everyone you meet</string>
    <string name="iq_test">IQ Test</string>

</resources>