<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_DepressionTest"
            android:icon="@drawable/depression"
            android:title="@string/menu_depressionTest" />
        <item
            android:id="@+id/nav_ProgressTest"
            android:icon="@drawable/progress_indicator"
            android:title="@string/menu_ProgressTest" />
        <item
            android:id="@+id/nav_suggestion"
            android:icon="@drawable/suggestion"
            android:title="@string/menu_suggestion" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/profile"
            android:title="@string/menu_profile" />
        <item
            android:id="@+id/nav_iqTest"
            android:icon="@drawable/profile"
            android:title="@string/iq_test" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/logout"
            android:title="@string/menu_logout" />
    </group>
</menu>